# pico_storage_driver

./: CMakeLists.txt  LICENSE  README.md  main.c
storage_driver/: CMakeLists.txt  msc_device_disc.c  storage_driver.h
storage_driver/flash/: w25q.c  w25q.h
storage_driver/sdmmc/: spi_sdmmc.c  spi_sdmmc.h
